Fix list z-index

--- a/src/FakeFooter.css
+++ b/src/FakeFooter.css
@@ -21,6 +21,8 @@
 }
 
 #fake-footer-list {
+  position: relative;
+  z-index: 2;
   display: flex;
   flex-wrap: wrap;
   gap: 2rem;
